--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,14 @@
 
 # external requirements
 click
-scikit-learn == 0.24.1
 #Sphinx
 #python-dotenv>=0.5.1
-
-
+python==3.8.1
+numpy==1.20.1
+matplotlib==3.1.3
+pandas==1.0.0
+seaborn==0.11.1
+scikit-learn==0.24.2
+jupyter==1.0.0
+jupyterlab==1.2.6
+pysal==2.0.0
